--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "bootstrap-icons": "^1.1.0",
     "bootstrap-vue": "^2.17.3",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
-    "vue-scrollto": "^2.20.0"
+    "vue-scrollto": "^2.20.0",
+    "vue2-scrollspy": "^2.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.0",
